objects/TASKRAY__trChecklistItem__c.object
<CustomObject>
    <description>This is the primary TaskRay object for Checklist Items.  This object may be used to manage reports, dashboards, workflows and other native Salesforce functionality.</description>
    <fields>
        <fullName>TASKRAY__Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Project_Task__c</fullName>
        <label>TaskRay Task</label>
        <referenceTo>TASKRAY__Project_Task__c</referenceTo>
        <relationshipLabel>TaskRay Checklist Items</relationshipLabel>
        <relationshipName>TaskRay_Checklist_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TASKRAY__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trChecklistGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist Group</label>
        <referenceTo>TASKRAY__trChecklistGroup__c</referenceTo>
        <relationshipName>TaskRay_Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trIsMyChecklistItem__c</fullName>
        <formula>TASKRAY__trOwner__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Checklist Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trLongName__c</fullName>
        <label>Checklist Item Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectId__c</fullName>
        <formula>CASESAFEID(TASKRAY__Project_Task__r.TASKRAY__Project__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTemplateSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Source</label>
        <referenceTo>TASKRAY__trChecklistItem__c</referenceTo>
        <relationshipLabel>Cloned Checklist Items</relationshipLabel>
        <relationshipName>Template_Source</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TaskRay Checklist Item</label>
    <listViews>
        <fullName>TASKRAY__AllOpenChecklistItems</fullName>
        <columns>NAME</columns>
        <columns>TASKRAY__trChecklistGroup__c</columns>
        <columns>TASKRAY__Project_Task__c</columns>
        <columns>TASKRAY__trOwner__c</columns>
        <columns>TASKRAY__Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASKRAY__Completed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Checklist Items</label>
    </listViews>
    <listViews>
        <fullName>TASKRAY__MyOpenChecklistItems</fullName>
        <columns>NAME</columns>
        <columns>TASKRAY__trChecklistGroup__c</columns>
        <columns>TASKRAY__Project_Task__c</columns>
        <columns>TASKRAY__trOwner__c</columns>
        <columns>TASKRAY__Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASKRAY__Completed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASKRAY__trIsMyChecklistItem__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Open Checklist Items</label>
    </listViews>
    <nameField>
        <label>TaskRay Checklist Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>